--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
+application.args=256 4 1 R 1 bin_10000.bin
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\gusta\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
